main_stylesheet.css
/* ... */
@keyframes fadeinright{
    from{
        left : -25px
    }
}

@keyframes fadeinleft{
    from{
        right : -25px;
    }
}



/**SECOND SECTION STARTS HERE**/

.homepage-products{
    padding : 40px 30px;
    margin-top:7px;
}

.homepage-products h1{
    font-size : 25px;
    margin-bottom : 15px;
    color : #d71920;
}

.homepage-products p{
    font-size: 16px;
    color: #0059a9;
    margin : 15px 0px 10px;
}

.homepage-products .row > div{
    display : flex;
    flex-direction: column;
    align-items: center;
}

.homepage-products .row > div p{
    text-align: center;
    width : 90%;
}


/***PAGE FOOTER STYLING STARTS HERE***/

.contact-details{
    background-image: url("pics/general_pics/footer.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    padding : 5px 15px 0px;
}

.contact-details .spoonpart{
    display : flex;
    justify-content: space-between;
    padding : 5px 15px 0px;
}

.spoonpart p{
    font-size : 12px;
    color : white;
    align-self: center;
    padding : 0px 20px;
}

.contact-details .sitemap{
    display : none;
}

/*****ABOUT PAGE STYLING STARTS HERE*****/
/*****==============================*****/

.aboutus-body {
    margin-top : 5px;
    padding : 40px 30px;
}

.aboutus-body .row > div img{
    width : 100%;
}

.aboutus-body h1{
    color: #d71920;
    font-weight: 400;
}

.aboutus-body p{
    color: #0059a9;
    font-family: 'Open Sans';
}

.aboutus-body .about-us-info{
    padding : 20px 0px 0px;
}


/*****PRODUCT RANGE STYLING STARTS HERE*****/


.productrange-body h5,.bunsAndRolls-body h5,.vitaLifeBunsAndRolls-body h5 ,.treatsBunsAndRolls-body h5 ,.vitaLifeBread-body h5{
    color : #d71920;
    font-weight : 700;
    padding-top : 10px;
    font-size : 18px;
}

.productrange-body p,.bunsAndRolls-body p ,.vitaLifeBunsAndRolls-body p,.treatsBunsAndRolls-body p ,.vitaLifeBread-body p{
    position : absolute;
    top : 98%;
    color: #0059a9;
    font-family: 'Open Sans';
    font-size : 16px;
}

.productrange-body .row{
    padding : 30px;
}

.pageband{
    padding : 15px;
    background-image: url("pics/general_pics/band-background.jpg");
    background-position : center;
    background-size : cover;
    background-repeat: no-repeat;
    color : white;
    font-size : 20px;
    text-align : center;
}

.pageband h1{
    font-size : 28px;
    color : #fff;
    font-weight : 400;
}

.bunsAndRolls-body .row{
    padding-bottom : 30px;
}

.bunsAndRolls-body .col-md-4{
    margin-left : 35px;
}

.bunsAndRolls-body img{
    width : 280px;
    height : 338px;
}

/***BAKERIES PAGE STYLING STARTS HERE***/

.bakeries-body p{
    color: #0059a9;
    font-size : 16px;
    font-weight : 400;
    font-family: 'open Sans';
}

.bakeries-body .bakeries-line{
    border-color: #0059a9;
    position : relative;
    margin : 25px 0px;
}

.bakeries-body h5{
    color : #d71920;
    font-weight: 700;
    font-size : 16px;
}

/*****COMPETITIONS PAGE STYLING STARTS HERE*****/

.competitionsWinners-body{
    padding : 50px 100px 30px;
    background-color : #C7333A ;
}

.competitionsband{
    background-image : url("pics/general_pics/header.jpg");
    padding : 15px 10px 10px 100px;
    background-position : center;
    background-size : cover;
    background-repeat: no-repeat;
}

.competitionsband h1{
    font-size : 28px;
    color : #fff;
    font-weight : 400;
    font-family: sans-serif;
}

.competitions-body h1{
    font-size : 28px;
    color : #0059a9;
    font-family : sans-serif;
}

.competitions-line{
    border : 1px dashed #d71920;
}

.competition-terms{
    list-style-type: none;
    padding : 0;
    margin : 0;
}

.competition-terms li a{
    color : #0059a9;
}

.picturesPart{
    padding : 8px 0px 10px 0px;
}

/*****CONTACT US PAGE STYLING STARTS HERE*****/

.contact-us-body .row .image-container img{
    width : 100%;
    height: 411px;
}

.contact-us-body{
    margin-top : 5px;
}

.contact-us-body .row{
    padding : 40px 30px;
}

.contactuslist{
    list-style-type : none;
    position : relative;
}

.contactuslist li{
    padding : 0;
    margin : 0;
}

.contactuslist p{
    font-size: 16px;
    font-family: 'open-sans';
    color: #0059a9;
    margin : 2px;
    font-weight : 400;
}

.contactuslist h5{
    font-size : 16px;
    font-weight : 600;
    color : #d71920;
    font-family: 'open-Sans';
}

.contactusline{
    border : 1px dashed #d71920;
}

.contact-us-form h3{
    color : #d71920;
    font-weight : bold;
    font-size : 24px;
}

#contactform input{
    padding : 7px;
    border : none;
    margin : 0;
    caret-color: grey;
    color : grey;
    width : 100%;
}

#contactform input::placeholder{
    color : grey;
    font-weight : 450;
    font-size : 15px;
}

#contactform input:focus{
    outline : none;
}

#contactform .validationMessage{
    color : #d71920;
    left : 3px;
    font-size : 14px;
}

#contactform label{
    color: #0059a9;
    font-size : 14px;
    padding : 5px;
    display : block;
}

#contactform select{
    width : 100%;
    font-size : 15px;
    color : grey;
    padding : 5px;
    border : none;
    margin-left : 2px;

}

#contactform select:focus{
    outline : none;
}

#contactform #address, #message{
    width : 100%;
    padding : 5px;
    margin-left : 2px;
    border : none;
    margin-top : 8px;
    height : 100px;
    caret-color: grey;
    color : grey;
}

#contactform #address::placeholder{
    color : grey;
    font-weight : 450;
    font-size : 15px;
}

#contactform #address:focus{
    outline : none;
}

#contactform #message::placeholder{
    color : grey;
    font-weight : 450;
    font-size : 15px;
}

#contactform #message:focus{
    outline : none;
}

#contactform .icons-container{
    width : 100%;
    border : 1px solid #0059A9;
    padding : 10px;
    display : flex;
    flex-direction: column;
}

.icons-container p{
    font-size : 14px;
    color: #0059a9;
    font-family: 'open sans';
    text-align : center;
}
/* ... */

